# mandelbrust

./: Cargo.toml  README.md
gui/: Cargo.toml
gui/src/: main.rs  window.rs
src/: color.rs  lib.rs  main.rs  mandel.rs  window.rs
