[package]
name = "mandelbrust"
version = "0.1.0"
authors = ["Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2018"

[dependencies]
rayon = "1.3.0"
faster = { git = "https://github.com/AdamNiederer/faster" }
packed_simd = "*"

[[bench]]
name = "mandel"
harness = false

[dev-dependencies]
criterion = "0.3"

[workspace]
members = ["gui"]
default-members = ["gui"]
