[package]
name = "mandelbrust"
version = "0.1.0"
authors = ["Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2018"

[dependencies]
rayon = "1.3.0"
packed_simd = { version = "0.3.5", package = "packed_simd_2" }

[[bench]]
name = "mandel"
harness = false

[dev-dependencies]
criterion = "0.3"

[workspace]
members = ["gui"]
